menambahkan data nama dan rombel

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Ini halaman index</h1>
+    <h2>Nama : Muhammad Saputra Ardiansyah Wiranata Hasibuan</h2>
+    <h2>Rombek: PPLG X-4</h2>
 </body>
 </html>
